src/objects/SomTv_Kontaktbetreuer__c.object
<CustomObject>
    <fields>
        <fullName>SomTv_Account__c</fullName>
        <description>Account des betreuten Kontakts</description>
        <formula>SomTv_Kontakt__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account des betreuten Kontakts</inlineHelpText>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Benutzer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benutzer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Kontaktbetreuer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_Betreuerrolle__c</fullName>
        <label>Betreuerrolle</label>
        <picklist>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_GueltigBis__c</fullName>
        <label>gültig bis</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_GueltigVon__c</fullName>
        <label>gültig von</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_Kontakt__c</fullName>
        <label>Kontakt</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Kontaktbetreuer</relationshipLabel>
        <relationshipName>Kontaktbetreuer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Kontaktbetreuer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SomTv_Account__c</columns>
        <columns>SomTv_Kontakt__c</columns>
        <columns>SomTv_Benutzer__c</columns>
        <columns>SomTv_Betreuerrolle__c</columns>
        <columns>SomTv_GueltigVon__c</columns>
        <columns>SomTv_GueltigBis__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>KB-{000}</displayFormat>
        <label>Kontaktbetreuer-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kontaktbetreuer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>